# fractal_generator

./: .gitignore  CMakeLists.txt  PixelShader.frag  PixelShader.glsl  VertexShader.glsl  color_manager.cpp  color_manager.h  fractal_generator.cpp  fractal_generator.exe.metagen  fractal_generator.h  fractal_generator.iobj  fractal_generator.ipdb  fractal_generator.sln  fractal_generator.txt  fractal_generator.vcxproj  geometry_generator.cpp  geometry_generator.h  header.h  lens_shapes.h  main.cpp  matrix_creator.cpp  matrix_creator.h  point_generator.cpp  point_generator.h  random_generator.h  screencap.cpp  screencap.h  settings_manager.cpp  settings_manager.h
2016_07_18/: E43oDUCANdxyRzJK87jlaObp3kKvE6Nz_g002_000.tif
2016_07_27/: PixelShader.glsl  VertexShader.glsl
2016_07_28/: VertexShader.glsl
artgen/: artgen.cpp  artgen.sln  artgen.vcxproj  artgen.vcxproj.filters
classes/: color_manager.cpp  fractal_generator.cpp  geometry_generator.cpp  jeploot.cpp  main.cpp  obj_parser.cpp  ogl_tools.cpp  random_generator.cpp  screencap.cpp  settings_manager.cpp
include/: color_manager.h  fractal_generator.h  geometry_generator.h  header.h  jeploot.h  ogl_tools.h  random_generator.h  screencap.h  settings_manager.h
shaders/: PixelShader.glsl  VertexShader.glsl
